--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@grafana/ui": "^9.3.2",
     "@kubernetes/client-node": "^0.18.0",
+    "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,7 @@
     "@types/react-dom": "^18.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-final-form": "^6.5.9",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
